--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
-    "morgan": "^1.10.0"
+    "knex": "^0.21.12",
+    "mocha": "^8.1.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.4",
+    "pg": "^8.3.3",
+    "postgrator": "^4.1.1",
+    "postgrator-cli": "^3.3.0",
+    "supertest": "^5.0.0",
+    "xss": "^1.0.8"
   }
 }
